# h02_data_structures-Mapc27

./: CMakeLists.txt  README.md  main.cpp
.github/classroom/: autograding.json
include/: array_list.hpp  element.hpp  linked_list.hpp
include/private/: internal.hpp
src/: array_list.cpp  linked_list.cpp
tests/: CMakeLists.txt  array_list_tests.cpp  generation.hpp  linked_list_tests.cpp
